--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="carousel-item">
                 <img src="https://source.unsplash.com/1920x800/?technology,tablet" class="d-block w-100" alt="Digital">
                 <div class="carousel-caption d-none d-md-block container">
-                    <h1 class="display-3">SimplesCondo Digital.</h1>
+                    <h1 class="display-3">Nome Empresa.</h1>
                     <p class="fs-4">Tudo o que você precisa a um toque de distância no nosso App.</p>
                 </div>
             </div>
@@ -258,7 +258,7 @@
             <div class="row g-4">
                 
                 <div class="col-lg-4 col-md-6">
-                    <h4 class="text-white mb-4"><i class="bi bi-buildings"></i> SimplesCondo</h4>
+                    <h4 class="text-white mb-4"><i class="bi bi-buildings"></i> Nome Empresa</h4>
                     <p class="small">
                         Há mais de 20 anos transformando a vida em condomínio. 
                         Unimos tecnologia e atendimento humanizado para valorizar seu patrimônio.
@@ -275,7 +275,7 @@
                     <h5>Institucional</h5>
                     <ul class="list-unstyled d-flex flex-column gap-2 small">
                         <li><a href="#">Quem Somos</a></li>
-                        <li><a href="#">LelloLab (Inovação)</a></li>
+                        <!-- <li><a href="#">LelloLab (Inovação)</a></li> -->
                         <li><a href="#">Nossa História</a></li>
                         <li><a href="#">Carreiras</a></li>
                     </ul>
@@ -296,7 +296,7 @@
                     <ul class="list-unstyled small text-secondary">
                         <li class="mb-2"><i class="bi bi-geo-alt me-2"></i> Av. Paulista, 1000 - São Paulo/SP</li>
                         <li class="mb-2"><i class="bi bi-telephone me-2"></i> (11) 3003-0000</li>
-                        <li class="mb-2"><i class="bi bi-envelope me-2"></i> contato@simplescondo.com.br</li>
+                        <li class="mb-2"><i class="bi bi-envelope me-2"></i> contato@nomemepresa.com.br</li>
                     </ul>
                     <div class="mt-3">
                         <img src="https://via.placeholder.com/100x40?text=App+Store" alt="App Store" class="me-2 opacity-50">
@@ -309,7 +309,7 @@
 
             <div class="row align-items-center small">
                 <div class="col-md-6 text-center text-md-start">
-                    &copy; 2026 SimplesCondo Administração. Todos os direitos reservados.
+                    &copy; 2026 Nome Empresa Administração. Todos os direitos reservados.
                 </div>
                 <div class="col-md-6 text-center text-md-end mt-3 mt-md-0">
                     <a href="#" class="me-3">Política de Privacidade</a>
